ptvs-platform/mesh/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: ptvs-mtls
  namespace: mankind
spec:
  mtls:
    mode: STRICT
