ptvs-platform/mesh/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ptvs
  namespace: mankind
spec:
  host: ptvs.mankind.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
